added error handler, small refactoring
