# internal/app/routes.go
@@ -14,7 +14,7 @@ func (a *App) InitRoutes() {
 		v1.GET("incidents", a.GetIncidentsHandler)
 		v1.POST("incidents", a.ValidateComponentsMW(), a.PostIncidentHandler)
 		v1.GET("incidents/:id", a.GetIncidentHandler)
-		v1.PUT("incidents/:id")
+		v1.PATCH("incidents/:id", a.ValidateComponentsMW(), a.PatchIncidentHandler)
 
 		v1.GET("rss")
 		v1.GET("history")
